--- a/src/main/resources/templates/52week.html
+++ b/src/main/resources/templates/52week.html
@@ -6,6 +6,14 @@
     <!--  Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mr+Bedfort&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,8 +63,9 @@
             color: black;
             text-decoration: none;
         }
+
         h1 {
-            font-family: 'Sen', sans-serif;
+            font-family: 'Satisfy', cursive;
         }
 
         #logout {
@@ -70,6 +79,7 @@
             align-items: center;
             margin-top: 0;
         }
+
         #challengeBody {
             display: flex;
             justify-content: center;
@@ -88,9 +98,49 @@
             margin-left: 125px;
             color: #777777;
         }
+
         #challengeHeading h1 {
-            font-family: 'Mr Bedfort', cursive;
+            font-family: 'Satisfy', cursive;
             font-size: 48px;
+        }
+
+        /*  What's Your Why  */
+        #whyHeader h1 {
+            font-family: 'Satisfy', cursive;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #whyHeader p {
+            text-align: center;
+            font-size: 20px;
+            font-family: 'Quicksand', sans-serif;
+            width: 100vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            color: #4c4c4c;
+        }
+
+        #whyBox {
+            background-color: #DCF7FF;
+            border-radius: 50px;
+            height: 200px;
+            width: 75%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 50px;
+            margin-left: 150px;
+        }
+
+        hr {
+            opacity: 35%;
+            margin-bottom: 50px;
+            margin-top: 50px;
+            width: 50%;
         }
     </style>
 </head>
@@ -106,9 +156,11 @@
         <ul id="listItems">
             <li><a th:href="@{/challenges/main}">Challenges</a></li>
             <li><a th:href="@{/profile}">Profile</a></li>
-            <li><form th:action="@{/logout}" th:method="post">
-                <button id="logout" class="btn-link btn">Logout</button>
-            </form></li>
+            <li>
+                <form th:action="@{/logout}" th:method="post">
+                    <button id="logout" class="btn-link btn">Logout</button>
+                </form>
+            </li>
         </ul>
     </div>
 </nav>
@@ -117,11 +169,23 @@
         <h1>52 Week Savings Challenge</h1>
         <div id="challengesP">
             <img src="">
-        <p>The 52 Week Saving’s Challenge is by far one of the most popular of the challenges! Each week, for 52 weeks [one year], you’ll put away a pre selected amount!
-            All you have to do here is determine your amount you’ll be saving, jot it down and watch as your savings grow!</p>
+            <p>The 52 Week Saving’s Challenge is by far one of the most popular of the challenges! Each week, for 52
+                weeks [one year], you’ll put away a pre selected amount!
+                All you have to do here is determine your amount you’ll be saving, jot it down and watch as your savings
+                grow!</p>
             <img src="">
         </div>
     </div>
+</div>
+<hr>
+<div id="why">
+    <div id="whyHeader">
+        <h1>What’s your Why?</h1>
+        <p>Why are you saving? What is it that you’re saving for?</p>
+    </div>
+    <div id="whyBox"></div>
+    <div id="whyEdit"></div>
+    <div id="whyDelete"></div>
 </div>
 </body>
 </html>
