--- a/src/main/resources/templates/nospend.html
+++ b/src/main/resources/templates/nospend.html
@@ -6,6 +6,14 @@
     <!--  Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -113,6 +121,43 @@
             align-items: center;
             flex-direction: column;
         }
+        /*  What's Your Why  */
+        #whyHeader h1 {
+            font-family: 'Satisfy', cursive;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #whyHeader p {
+            text-align: center;
+            font-size: 20px;
+            font-family: 'Quicksand', sans-serif;
+            width: 100vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            color: #4c4c4c;
+        }
+
+        #whyBox {
+            background-color: #DCF7FF;
+            border-radius: 50px;
+            height: 200px;
+            width: 75%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 50px;
+            margin-left: 150px;
+        }
+        hr {
+            opacity: 35%;
+            margin-bottom: 50px;
+            margin-top: 50px;
+            width: 50%;
+        }
     </style>
 </head>
 <body>
@@ -151,6 +196,16 @@
 
     </div>
     <h1>Total Saved: $141</h1>
+</div>
+<hr>
+<div id="why">
+    <div id="whyHeader">
+        <h1>What’s your Why?</h1>
+        <p>Why are you saving? What is it that you’re saving for?</p>
+    </div>
+    <div id="whyBox"></div>
+    <div id="whyEdit"></div>
+    <div id="whyDelete"></div>
 </div>
 </body>
 </html>
