--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -28,6 +28,7 @@
             align-items: center;
             font-size: 44px;
         }
+
         #weatherHeader {
             display: flex;
             justify-content: center;
@@ -44,6 +45,7 @@
             justify-content: center;
             align-items: center;
         }
+
         #weatherP p {
             font-family: 'Scope One', serif;
             text-align: center;
@@ -63,6 +65,7 @@
             flex-direction: column;
             text-align: center;
         }
+
         /* Nav Bar */
 
         #listItems {
@@ -128,6 +131,7 @@
             height: 100px;
             margin-bottom: 10px;
         }
+
         #date h1 {
             margin: 20px;
             font-family: 'Satisfy', cursive;
@@ -143,6 +147,7 @@
             height: 100px;
             margin-bottom: 10px;
         }
+
         #weather h1 {
             margin: 20px;
             font-family: 'Satisfy', cursive;
@@ -159,6 +164,7 @@
             height: 100px;
             margin-bottom: 10px;
         }
+
         #entry h1 {
             margin: 20px;
             font-family: 'Satisfy', cursive;
@@ -174,6 +180,7 @@
             height: 100px;
             margin-bottom: 10px;
         }
+
         #saved h1 {
             margin: 20px;
             font-family: 'Satisfy', cursive;
@@ -181,6 +188,43 @@
 
         #currentWeather {
             display: flex;
+        }
+        /*  What's Your Why  */
+        #whyHeader h1 {
+            font-family: 'Satisfy', cursive;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #whyHeader p {
+            text-align: center;
+            font-size: 20px;
+            font-family: 'Quicksand', sans-serif;
+            width: 100vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            color: #4c4c4c;
+        }
+
+        #whyBox {
+            background-color: #DCF7FF;
+            border-radius: 50px;
+            height: 200px;
+            width: 75%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 50px;
+            margin-left: 150px;
+        }
+        hr {
+            opacity: 35%;
+            margin-bottom: 50px;
+            margin-top: 50px;
+            width: 50%;
         }
     </style>
 </head>
@@ -234,6 +278,16 @@
         <h1>Total Saved</h1>
         <h1>$75</h1>
     </div>
+</div>
+<hr>
+<div id="why">
+    <div id="whyHeader">
+        <h1>What’s your Why?</h1>
+        <p>Why are you saving? What is it that you’re saving for?</p>
+    </div>
+    <div id="whyBox"></div>
+    <div id="whyEdit"></div>
+    <div id="whyDelete"></div>
 </div>
 <script src="/weather.js"></script>
 </body>
