Finally centered get started button on home page however now theres a double button I have to get rid of , youtube API is pulling well, right now its just the thumbnail image but it's loading so I'll just need to style that

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -160,6 +160,13 @@
             width: 100px;
             /*background-color: #ff62fa;*/
         }
+        #home, #getStarted {
+            display: flex;
+            margin-top: 275px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 </head>
 <body>
