Got weather api working, now I'm styling and trying to figure out exactly how else I'd like to use it

--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -269,6 +269,7 @@
     <div id="weather">
         <h1>Today's Weather</h1>
         <h1 id="currentWeather"></h1>
+        <p id="notification"></p>
     </div>
     <div id="entry">
         <h1>Today's Entry</h1>
