--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -23,7 +23,7 @@
 
     <style>
         body {
-            background-color: rgba(250, 250, 250, 0.75);
+            /*background-color: rgba(250, 250, 250, 0.75);*/
             color: #000000;
         }
 
