--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -189,6 +189,7 @@
         #currentWeather {
             display: flex;
         }
+
         /*  What's Your Why  */
         #whyHeader h1 {
             font-family: 'Satisfy', cursive;
@@ -220,6 +221,7 @@
             margin-top: 50px;
             margin-left: 150px;
         }
+
         hr {
             opacity: 35%;
             margin-bottom: 50px;
@@ -286,7 +288,11 @@
         <h1>What’s your Why?</h1>
         <p>Why are you saving? What is it that you’re saving for?</p>
     </div>
-    <div id="whyBox"></div>
+    <div id="whyBox">
+        <form th:method="post" th:action="@{/weather}" th:object="${why}">
+<!--            <input type="text" th:field="">-->
+        </form>
+    </div>
     <div id="whyEdit"></div>
     <div id="whyDelete"></div>
 </div>
