--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,159 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap" rel="stylesheet">
-    <!--<link rel="stylesheet" type="text/css" href="/static/style.css">-->
-    <style>
-        * {
-            /*margin: 0;*/
-            padding: 0;
-        }
-
-        body {
-            background-color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #mainDiv {
-            display: grid;
-            align-self: center;
-            justify-self: center;
-            font-size: 30px;
-            font-family: 'Mr De Haviland', cursive;
-        }
-
-        li {
-            list-style: none;
-            font-family: 'Poiret One', cursive;
-        }
-
-        p {
-            font-family: 'GFS Neohellenic', sans-serif;
-            /*display: grid;*/
-            /*align-content: center;*/
-            /*justify-content: center;*/
-        }
-
-        .buttonHome {
-            height: 50px;
-            width: 150px;
-            border-radius: 40px;
-            background-color: #70cbff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            outline: none;
-            text-align: center;
-
-        }
-
-        .paragraphs {
-            display: flex;
-            /*justify-content: center;*/
-            /*align-content: center;*/
-            flex-direction: column;
-            width: 90%;
-            font-size: 24px;
-            color: #5a5a5a;
-            align-items: center;
-            justify-content: center;
-            margin: 50px;
-        }
-
-        #getStarted {
-            height: 50px;
-            width: 150px;
-            border-radius: 40px;
-            background-color: #70cbff;
-            /*display: grid;*/
-            /*justify-content: center;*/
-            /*align-content: center;*/
-            font-family: 'GFS Neohellenic', sans-serif;
-            font-size: 20px;
-            outline: none;
-            border: transparent;
-        }
-
-        #getStarted > a {
-            color: black;
-            text-decoration: none;
-        }
-
-        #listItems a {
-            color: black;
-            text-decoration: none;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100px;
-
-        }
-
-        #lightBulbs {
-            border-radius: 50px;
-            margin-bottom: 50px;
-        }
-
-        #bulbs {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #home {
-            display: grid;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            width: 100vw;
-            text-align: center;
-        }
-
-        /* Nav Bar */
-
-        #listItems {
-            list-style: none;
-            font-family: 'Poiret One', cursive;
-            display: flex;
-            width: 35%;
-            justify-content: space-around;
-            /*background-color: #d0cfcf;*/
-            letter-spacing: 2px;
-            font-size: 18px;
-            cursor: pointer;
-
-        }
-
-        #navigationBody {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            min-height: 10vh;
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-            /*background-color: #7fcffd;*/
-            width: 100vw;
-
-        }
-
-        .logo {
-            height: 100px;
-            width: 100px;
-            /*background-color: #ff62fa;*/
-        }
-        #home, #getStarted {
-            display: flex;
-            margin-top: 275px;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/home.css">
 </head>
 <body>
 <div id="home">
