--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
+    <link href="/register.css" rel="stylesheet">
     <!--  Google Fonts Links  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,109 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-    <!--Styling-->
-    <style>
-        body {
-            background-color: #ffffff;
-        }
 
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            width: 100%;
-            text-align: center;
-        }
-
-        #register {
-            padding-bottom: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        form {
-            padding-top: 50px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            font-family: 'Manjari', sans-serif;
-
-        }
-
-        form > input {
-            border-radius: 50px;
-            background-color: #d0cfcf;
-            outline: none;
-            border: transparent;
-            padding-bottom: 25px;
-            text-align: center;
-            align-items: center;
-            font-family: 'Satisfy', cursive;
-            width: 350px;
-            margin: 30px;
-            font-size: 20px;
-
-
-        }
-
-        h1 {
-            font-family: 'Satisfy', cursive;
-            font-size: 38px;
-        }
-
-        .btn {
-            margin-top: 15px;
-            font-family: 'Satisfy', cursive;
-            height: 30px;
-            width: 175px;
-            background-color: #7fcffd;
-            cursor: pointer;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-        }
-
-        #listItems {
-            list-style: none;
-            font-family: 'Poiret One', cursive;
-            display: flex;
-            width: 35%;
-            justify-content: space-around;
-            /*background-color: #d0cfcf;*/
-            letter-spacing: 2px;
-            font-size: 18px;
-
-        }
-
-        #listItems a {
-            color: black;
-            text-decoration: none;
-        }
-
-        #navigationBody {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            min-height: 10vh;
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-            width: 100vw;
-
-            /*background-color: #7fcffd;*/
-        }
-
-        .logo {
-            height: 100px;
-            width: 100px;
-            /*background-color: #ff62fa;*/
-        }
-    </style>
 </head>
 <body>
 <div class="container">
