--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Resources</title>
-    <!--    <link href="/style.css" rel="stylesheet">-->
+    <link href="/resources.css" rel="stylesheet">
     <!--  Google Fonts Links  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,155 +20,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Over+the+Rainbow&display=swap" rel="stylesheet">
-
-    <style>
-        body {
-            /*background-color: rgba(250, 250, 250, 0.75);*/
-            color: #000000;
-        }
-
-        .img {
-            border-radius: 30px;
-
-        }
-
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            text-align: center;
-        }
-
-        p {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: 'GFS Neohellenic', sans-serif;
-            width: 600px;
-            font-size: 24px;
-            margin: 50px;
-            padding: 25px;
-            text-align: center;
-        }
-
-        sub {
-            font-size: 24px;
-            font-family: 'Over the Rainbow', cursive;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        h1 {
-            font-family: 'Satisfy', cursive;
-            font-size: 48px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 50px;
-        }
-
-        h3 {
-            font-size: 25px;
-            font-family: 'GFS Neohellenic', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 80%;
-            color: #323232;
-            /*background-color: rgba(126, 225, 255, 0.53);*/
-            border-radius: 50px;
-            margin-left: 40px;
-            text-align: center;
-
-        }
-
-        nav {
-            font-family: 'Satisfy', cursive;
-        }
-
-        #resourcesBody {
-            display: grid;
-            justify-content: center;
-            align-items: center;
-            grid-template-rows: 600px 600px;
-            grid-template-columns: 600px 600px 600px;
-        }
-
-        /* Nav Bar */
-        #listItems {
-            list-style: none;
-            font-family: 'Poiret One', cursive;
-            display: flex;
-            width: 35%;
-            justify-content: space-around;
-            /*background-color: #d0cfcf;*/
-            letter-spacing: 2px;
-            font-size: 18px;
-
-        }
-
-        #listItems a {
-            color: black;
-            text-decoration: none;
-        }
-
-        #navigationBody {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            min-height: 10vh;
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-            /*background-color: #7fcffd;*/
-            cursor: pointer;
-            width: 100vw;
-        }
-
-        .logo {
-            height: 100px;
-            width: 100px;
-            /*background-color: #ff62fa;*/
-        }
-
-        #youtubeContainer {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            width: border-box;
-            margin: 50px;
-
-
-        }
-
-        #youtube {
-            display: flex;
-            border-radius: 50px;
-            justify-content: center;
-            align-items: center;
-            margin: 20px;
-
-        }
-
-
-
-        #youtube img:hover {
-            background-color: #7fcffd;
-        }
-
-        .youtubeVideos {
-            display: grid;
-            justify-content: center;
-            align-items: center;
-            grid-template-columns: 450px 450px 450px 450px;
-            grid-template-rows: 450px 450px 450px 450px;
-            border-radius: 50px;
-
-        }
-    </style>
 </head>
 <body>
 <script src="/youtube.js"></script>
