--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -84,8 +84,8 @@
         <p>Why are you saving? What is it that you’re saving for?</p>
     </div>
     <div id="whyBox">
-        <form th:method="post" th:action="@{/weather}" th:object="${why}">
-<!--            <input type="text" th:field="">-->
+        <form th:method="post" th:action="@{/why}" th:object="${why}">
+            <input type="text" th:field="">
         </form>
     </div>
     <div id="whyEdit"></div>
