--- a/src/main/resources/templates/bingo.html
+++ b/src/main/resources/templates/bingo.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 
-    
+
     <link href="/bingo.css" rel="stylesheet">
 </head>
 <body>
@@ -58,35 +58,35 @@
     </div>
     <div id="bingoBoard">
         <div class="bingoTileWhole">
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
 
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
 
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">Free</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="0">Free</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
 
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
 
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
-            <h1 class="bingoTile">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" value="52">$52</h1>
 
 
         </div>
