--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -71,7 +71,7 @@
         </div>
         <div id="whyBox">
             <form th:method="post" th:action="@{/why/profile}" th:object="${why}">
-                <input type="text" id="whyText" th:field="${why.description}">
+                <input type="text" id="whyText" th:field="*{description}">
                 <button type="submit" id="profileWhyButton">Let's Do This!</button>
             </form>
         </div>
