Trying to get bingo challenge to work

--- a/src/main/resources/templates/bingo.html
+++ b/src/main/resources/templates/bingo.html
@@ -58,35 +58,35 @@
     </div>
     <div id="bingoBoard">
         <div class="bingoTileWhole">
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" id="1" value="52">$52</h1>
+            <h1 class="bingoTile" id="2" value="52">$52</h1>
+            <h1 class="bingoTile" id="3" value="52">$52</h1>
+            <h1 class="bingoTile" id="4" value="52">$52</h1>
+            <h1 class="bingoTile" id="5" value="52">$52</h1>
 
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" id="6" value="52">$52</h1>
+            <h1 class="bingoTile" id="7" value="52">$52</h1>
+            <h1 class="bingoTile" id="8" value="52">$52</h1>
+            <h1 class="bingoTile" id="9" value="52">$52</h1>
+            <h1 class="bingoTile" id="10" value="52">$52</h1>
 
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="0">Free</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" id="11" value="52">$52</h1>
+            <h1 class="bingoTile" id="12" value="52">$52</h1>
+            <h1 class="bingoTile" id="free" value="0">Free</h1>
+            <h1 class="bingoTile" id="13" value="52">$52</h1>
+            <h1 class="bingoTile" id="14" value="52">$52</h1>
 
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" id="15" value="52">$52</h1>
+            <h1 class="bingoTile" id="16" value="52">$52</h1>
+            <h1 class="bingoTile" id="17" value="52">$52</h1>
+            <h1 class="bingoTile" id="18" value="52">$52</h1>
+            <h1 class="bingoTile" id="19" value="52">$52</h1>
 
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
-            <h1 class="bingoTile" value="52">$52</h1>
+            <h1 class="bingoTile" id="20" value="52">$52</h1>
+            <h1 class="bingoTile" id="21" value="52">$52</h1>
+            <h1 class="bingoTile" id="22" value="52">$52</h1>
+            <h1 class="bingoTile" id="23" value="52">$52</h1>
+            <h1 class="bingoTile" id="24" value="52">$52</h1>
 
 
         </div>
