Fixed weather toggle so now you can see both f and c

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -71,8 +71,8 @@
         </div>
         <div id="whyBox">
             <form th:method="post" th:action="@{/why/profile}" th:object="${why}">
-                <input type="text" id="whyText" th:field="*{description}">
-                <button type="submit" id="profileWhyButton">Let's Do This!</button>
+                <!--                <input type="text" id="whyText" th:field="*{description}">-->
+                <!--                <button type="submit" id="profileWhyButton">Let's Do This!</button>-->
             </form>
         </div>
         <div id="whyEdit"></div>
