--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -70,7 +70,7 @@
     </div>
     <div id="entry">
         <h1>Today's Entry</h1>
-        <h1>$75</h1>
+        <h1 id="todayEntry"></h1>
     </div>
     <div id="saved">
         <h1>Total Saved</h1>
