--- a/src/main/resources/templates/52week.html
+++ b/src/main/resources/templates/52week.html
@@ -6,6 +6,10 @@
     <!--  Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=GFS+Neohellenic&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,6 +63,12 @@
         </div>
     </div>
 </div>
+<div id="header52">
+    <h1>Week Number</h1>
+    <h1>Weekly Deposit</h1>
+    <h1>Total Savings</h1>
+</div>
+<div id="added"></div>
 <hr>
 <div id="why">
     <div id="whyHeader">
