--- a/src/main/resources/templates/nospend.html
+++ b/src/main/resources/templates/nospend.html
@@ -59,7 +59,18 @@
         </div>
     </div>
     <div id="backgroundCard">
+        <div id="descriptionHeader">
+            <h1>Description</h1>
+            <h1>Amount</h1>
+        </div>
+        <div id="items">
 
+        </div>
+        <div id="addItem">
+            <form method="GET" th:action="@{/challenges/noSpend}">
+                <button id="addItemButton" type="submit"><img id="addIcon" src="https://img.icons8.com/ios/50/000000/add--v1.png"/></button>
+            </form>
+        </div>
     </div>
     <h1>Total Saved: $141</h1>
 </div>
