--- a/src/main/resources/static/weather.css
+++ b/src/main/resources/static/weather.css
@@ -26,7 +26,7 @@
 #weatherP p {
     font-family: 'Scope One', serif;
     text-align: center;
-    width: 50%;
+    width: 73%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -203,5 +203,9 @@ hr {
     opacity: 35%;
     margin-bottom: 50px;
     margin-top: 50px;
-    width: 50%;
+    width: 65%;
+}
+
+#challengesCards {
+    margin-inside: 25px;
 }
