Updates to resources page. Man covid is not fun, gonna take a break cause my head hurts

--- a/src/main/resources/static/resources.css
+++ b/src/main/resources/static/resources.css
@@ -144,3 +144,10 @@ nav {
     border-radius: 50px;
 
 }
+
+#relatedVideosP{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
