--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -70,6 +70,13 @@
 </div>
 <div id="relatedVideos">
     <h1>Related Videos</h1>
+    <div id="relatedVideosP">
+        <p>Here is a youtube challenge that gives a lot of great tips and advice about different saving's challenges as
+            well as budgeting and so much more!<br>
+            <br>These are just preview images to give you an idea of what type of content they have! <br>
+            channel!</p>
+        <a href="https://www.youtube.com/channel/UCaL8K8g8y8K4_CvNuN0BDtg">Click Here To Be Routed To Their Youtube Videos</a>
+    </div>
     <div class="youtubeVideos">
 
 
