--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -75,7 +75,7 @@
             well as budgeting and so much more!<br>
             <br>These are just preview images to give you an idea of what type of content they have! <br>
             channel!</p>
-        <a href="https://www.youtube.com/channel/UCaL8K8g8y8K4_CvNuN0BDtg">Click Here To Be Routed To Their Youtube Videos</a>
+        <a href="https://www.youtube.com/channel/UCaL8K8g8y8K4_CvNuN0BDtg" target="_blank">Click Here To Be Routed To Their Youtube Videos</a>
     </div>
     <div class="youtubeVideos">
 
