Trying to fix why table and get why section to work

--- a/src/main/resources/templates/52week.html
+++ b/src/main/resources/templates/52week.html
@@ -77,7 +77,7 @@
     </div>
     <div id="whyBox">
         <form th:method="post" th:action="@{/why/52week}" th:object="${why}">
-<!--            <input type="text" id="whyText" th:field="*{description}"/>-->
+            <input type="text" id="whyText" th:field="*{description}"/>
             <button type="submit" id="profileWhyButton">Let's Do This!</button>
         </form>
     </div>
