--- a/src/main/resources/templates/52week.html
+++ b/src/main/resources/templates/52week.html
@@ -34,7 +34,7 @@
 <nav>
     <div id="navigationBody">
         <div class="logo">
-            <a th:href="@{/home}">
+            <a th:href="@{/}">
                 <img src="/logo.jpg"
                      alt="logo" height="100px" width="150px">
             </a>
