--- a/src/main/resources/templates/challenges.html
+++ b/src/main/resources/templates/challenges.html
@@ -28,7 +28,7 @@
 <nav>
     <div id="navigationBody">
         <div class="logo">
-            <a th:href="@{/home}">
+            <a th:href="@{/}">
                 <img id="logoImg" src="/logo.jpg" alt="logo" width="150px" height="100px">
             </a>
         </div>
