--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -29,7 +29,7 @@
 <nav>
     <div id="navigationBody">
         <div class="logo">
-            <a th:href="@{/home}">
+            <a th:href="@{/}">
                 <img src="/logo.jpg"
                      alt="logo" height="100px" width="100px">
             </a>
